Playing around with a Nano virtual machine (NVM)

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable (core_test
 	peer_container.cpp
 	request_aggregator.cpp
 	signing.cpp
+	smart_contracts.cpp
 	socket.cpp
 	telemetry.cpp
 	toml.cpp
