--- a/nano/secure/CMakeLists.txt
+++ b/nano/secure/CMakeLists.txt
@@ -49,6 +49,8 @@ add_library (secure
 	utility.cpp
 	versioning.hpp
 	versioning.cpp
+	vm.hpp
+	vm.cpp
 	working.hpp)
 
 target_link_libraries(secure
